--- a/files/templates/files/info.html
+++ b/files/templates/files/info.html
@@ -47,7 +47,7 @@
 {% block content %}
 
 <div class="container text-center">
-    <div class="home-content">
+    <div class="terms-content">
         <h2>Πληροφορίες</h2>
         <p>Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα Μπλα </p>
         <button class="accordion">Τι είναι το αποθετήριο?</button>
@@ -69,8 +69,8 @@
         <hr/>
         <div style="padding: 10px">
             <p>
-                Οι υπηρεσίες αναπτύχθηκαν από το ΙΤΥΕ «ΔΙΟΦΑΝΤΟΣ» στο πλαίσιο του έργου «Ψηφιακή Εκπαιδευτική Πλατφόρμα,
-                στο πλαίσιο του ΕΠ «Εκπαίδευση και Δια Βίου Μάθηση» του ΕΣΠΑ 2007-2013 και υλοποιείται από το ΙΕΛ του ΕΚ «ΑΘΗΝΑ».
+                Οι υπηρεσίες του «Αποθετηρίου Εκπαιδευτικού Περιεχομένου Παιδαγωγικού Τμήματος Δημοτικής Αγωγής του Πανεπιστημίου Θεσσαλίας»
+                αναπτύχθηκαν στα πλαίσιο του έργου « ».
             </p>
         </div>
 
