--- a/files/templates/files/terms.html
+++ b/files/templates/files/terms.html
@@ -7,21 +7,21 @@
     <div class="terms-content">
         <h2 class="text-center">Όροι και Πολιτική Αποδεκτής Χρήσης του Αποθετηρίου</h2>
         <p>
-            Η επίσκεψη και χρήση της παρούσης δικτυακής πύλης (http://photodentro.edu.gr/aggregator/),
-            στο εξής αναφερόμενης ως κεντρική πύλη του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ»,
+            Η επίσκεψη και χρήση της παρούσης δικτυακής πύλης (https://repo.pre.uth.gr),
+            στο εξής αναφερόμενης ως «Αποθετήριο Εκπαιδευτικού Περιεχομένου Παιδαγωγικού Τμήματος Δημοτικής Αγωγής Πανεπιστημίου Θεσσαλίας»
             συνεπάγεται την ανεπιφύλακτη αποδοχή των όρων που ακολουθούν, οι οποίοι ισχύουν αμέσως μετά την πρώτη σας επίσκεψη σε αυτήν.
+            Το «Αποθετήριο Εκπαιδευτικού Περιεχομένου Παιδαγωγικού Τμήματος Δημοτικής Αγωγής Πανεπιστημίου Θεσσαλίας» αφεξής για λόγους συντομογραφίας,
+            θα αναφέρεται ως «Αποθετήριο».
         </p>
         <p>
             Οι όροι και η Πολιτική Αποδεκτής Χρήσης αποσκοπούν στο να βοηθήσουν τους χρήστες της κεντρικής πύλης του
-            Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ» (εγγεγραμμένους ή μη) να κατανοήσουν τον τρόπο
-            με τον οποίο μπορεί να χρησιμοποιηθεί το περιεχόμενο και οι υπηρεσίες του Εθνικού Συσσωρευτή Εκπαιδευτικού
-            Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ».
+            Αποθετηρίου (εγγεγραμμένους ή μη) να κατανοήσουν τον τρόπο
+            με τον οποίο μπορεί να χρησιμοποιηθεί το περιεχόμενο και οι υπηρεσίες του.
         </p>
         <p>
-            Όλοι οι χρήστες της κεντρικής πύλης του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ»
+            Όλοι οι χρήστες «Αποθετηρίου»
             πρέπει να συμμορφώνονται με τη συγκεκριμένη πολιτική, ο σκοπός της οποίας είναι η ενθάρρυνση αξιοποίησης
-            ψηφιακού εκπαιδευτικού υλικού, προστατεύοντας παράλληλα τους χρήστες και τα μέλη της κοινότητας του Εθνικού
-            Συσσωρευτή από παράνομες ενέργειες.
+            ψηφιακού εκπαιδευτικού υλικού, προστατεύοντας παράλληλα τους χρήστες και τα μέλη της κοινότητας του «Αποθετηρίο» από παράνομες ενέργειες.
         </p>
 
         <hr/>
@@ -32,31 +32,26 @@
                 <ol style="font-size: initial; font-weight: normal; margin-bottom: 10px">
                     <li>
                         <p>
-                            Η χρήση της κεντρικής πύλης του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ»
+                            Η χρήση της της υπηρεσίας του «Αποθετηρίου»
                             υπόκειται στις διατάξεις των ελληνικών και των διεθνών νόμων, στις επιταγές του εθιμικού δικαίου,
                             καθώς επίσης και στην υποχρέωση σεβασμού των χρηστών ηθών.
                         </p>
                     </li>
                     <li>
                         <p>
-                            Δεν επιτρέπεται η χρήση των υπηρεσιών της κεντρικής πύλης του Εθνικού Συσσωρευτή Εκπαιδευτικού
-                            Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ» με σκοπό την πρόκληση ή την προσπάθεια πρόκλησης βλάβης σε ανήλικους.
+                            Δεν επιτρέπεται η χρήση των υπηρεσιών του «Αποθετηρίου» με σκοπό την πρόκληση ή την προσπάθεια πρόκλησης βλάβης σε ανήλικους.
                         </p>
                     </li>
                     <li>
                         <p>
-                            Δεν επιτρέπεται η χρήση του υλικού και των υπηρεσιών της κεντρικής πύλης του Εθνικού
-                            Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ» για την πραγματοποίηση ενεργειών εξαπάτησης
-                            με σκοπό την αγορά ή την πώληση υλικού ή υπηρεσιών που διατίθενται μέσω της κεντρικής πύλης
-                            του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ».
+                            Δεν επιτρέπεται η χρήση του υλικού και των υπηρεσιών του «Αποθετηρίου» για την πραγματοποίηση ενεργειών εξαπάτησης
+                            με σκοπό την αγορά ή την πώληση υλικού ή υπηρεσιών που διατίθενται μέσω του «Αποθετηρίου».
                         </p>
                     </li>
                     <li>
                         <p>
-                            Οι χρήστες/επισκέπτες/μέλη της κεντρικής πύλης του Εθνικού Συσσωρευτή Εκπαιδευτικού
-                            Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ» συμφωνούν να μην κάνουν κακόβουλη χρήση αυτής ή παρεμβολές στις υπηρεσίες,
-                            τους servers ή τα δίκτυα που είναι συνδεδεμένα με τις υπηρεσίες του Εθνικού Συσσωρευτή
-                            Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ».
+                            Οι χρήστες/επισκέπτες/μέλη του «Αποθετηρίου» συμφωνούν να μην κάνουν κακόβουλη χρήση αυτής ή παρεμβολές στις υπηρεσίες,
+                            τους servers ή τα δίκτυα που είναι συνδεδεμένα με τις υπηρεσίες του.
                         </p>
                     </li>
                 </ol></li>
@@ -65,8 +60,8 @@
                 <ol style="font-size: initial; font-weight: normal; margin-bottom: 10px">
                     <li>
                         <p>
-                            Οι εγγεγραμμένοι χρήστες της κεντρικής πύλης του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ»,
-                            στο εξής αναφερόμενοι ως «μέλη της κοινότητας ΦΩΤΟΔΕΝΤΡΟΥ» ή απλά «μέλη», απαγορεύεται
+                            Οι εγγεγραμμένοι χρήστες του «Αποθετηρίου»,
+                            στο εξής αναφερόμενοι ως «μέλη της κοινότητας του Αποθετηρίου» ή απλά «μέλη», απαγορεύεται
                             να αναρτούν σχόλια ή να στέλνουν προσωπικά μηνύματα που είναι απειλητικά, προσβλητικά,
                             επιζήμια, δυσφημιστικά, χυδαία, βίαια, υβριστικά, ρατσιστικά, παραβιάζουν την προσωπικότητα και τα προσωπικά δεδομένα άλλων,
                             είναι ακατάλληλα για ανήλικους ή δύναται να προκαλέσουν βλάβη σε ανήλικους με οποιοδήποτε τρόπο,
@@ -77,7 +72,7 @@
                     </li>
                     <li>
                         <p>
-                            Οι διαχειριστές της κεντρικής πύλης του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ»
+                            Οι διαχειριστές της κεντρικής πύλης του «Αποθετηρίου»
                             διατηρούν το δικαίωμα να διαγράφουν/αποδημοσιεύουν σχόλια ή/και μηνύματα μελών, που παραβιάζουν
                             τους όρους του παραπάνω άρθρου §2.1 ή γενικά είναι επιζήμια για τους χρήστες της κεντρικής πύλης,
                             στην περίπτωση που θα γίνει αντιληπτό ή θα υπάρξει αποδεδειγμένη αναφορά από μέλη της κοινότητας,
@@ -86,11 +81,9 @@
                     </li>
                     <li>
                         <p>
-                            Σε περίπτωση παραβίασης των όρων του παραπάνω άρθρου §2.1 οι διαχειριστές της κεντρικής
-                            πύλης του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ» διατηρούν το δικαίωμα
+                            Σε περίπτωση παραβίασης των όρων του παραπάνω άρθρου §2.1 οι διαχειριστές του «Αποθετηρίου» διατηρούν το δικαίωμα
                             περιορισμού και/ή τερματισμού του λογαριασμού του μέλους καθώς και/ή της πρόσβασης στις
-                            υπηρεσίες της κεντρικής πύλης του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου
-                            «ΦΩΤΟΔΕΝΤΡΟ» χωρίς απαραίτητα προηγούμενη προειδοποίησή του.
+                            υπηρεσίες του «Αποθετηρίου» χωρίς απαραίτητα προηγούμενη προειδοποίησή του.
                         </p>
                     </li>
 
@@ -100,16 +93,15 @@
                 <ol style="font-size: initial; font-weight: normal; margin-bottom: 10px">
                     <li>
                         <p>
-                            Στην περίπτωση που χρήστες/επισκέπτες της κεντρικής πύλης ή μέλη της κοινότητας ΦΩΤΟΔΕΝΤΡΟΥ εντοπίσουν
+                            Στην περίπτωση που χρήστες/επισκέπτες της κεντρικής πύλης ή μέλη της κοινότητας του «Αποθετηρίου» εντοπίσουν
                             οποιουδήποτε είδους παραβίαση των όρων της Πολιτικής Αποδεκτής Χρήσης,
-                            καλούνται να ενημερώσουν τους διαχειριστές της κεντρικής πύλης του Εθνικού Συσσωρευτή
-                            Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ» στέλνοντας μήνυμα στο photodentro@cti.gr και αναφέροντας συγκεκριμένα στοιχεία,
+                            καλούνται να ενημερώσουν τους διαχειριστές της κεντρικής πύλης του «Αποθετηρίου» στέλνοντας μήνυμα στο lalal@uth.gr και αναφέροντας συγκεκριμένα στοιχεία,
                             όπως ημερομηνία, όνομα χρήστη ή url του σχολίου ή άλλου περιεχομένου όπου διαπιστώνεται η παραβίαση.
                         </p>
                     </li>
                     <li>
                         <p>
-                            Οι διαχειριστές της κεντρικής πύλης του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ»
+                            Οι διαχειριστές της κεντρικής πύλης του «Αποθετηρίου»
                             διατηρούν το δικαίωμα να διαγράφουν σχόλια ή και μηνύματα μελών που έχουν αποδεδειγμένα
                             αναφερθεί σαν ακατάλληλα σύμφωνα με τις ως άνω διαδικασίες.
                         </p>
@@ -120,22 +112,21 @@
                 <ol style="font-size: initial; font-weight: normal; margin-bottom: 10px">
                     <li>
                         <p>
-                            Οι χρήστες, κατά την εγγραφή τους στην κεντρική πύλη του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ»
-                            με χρήση του λογαριασμού τους στο Πανελλήνιο Σχολικό Δίκτυο (ΠΣΔ), συναινούν ότι τα μόνα στοιχεία που
-                            ανασύρονται από τη βάση δεδομένων του ΠΣΔ είναι το όνομα, το επώνυμό τους και το email τους.
+                            Οι συνδεόμενοι χρήστες με χρήση του λογαριασμού τους στο Πανεπιστήμιο Θεσσαλίας, κατά την σύνδεσή τους στο «Αποθετήριο»
+                            συναινούν ότι τα μόνα στοιχεία που
+                            ανασύρονται από τη βάση δεδομένων του Π.Θ. είναι το όνομα, το επώνυμό τους, το email τους και η ιδιότητά τους (καθηγητής/φοιτητής/μέλος ΔΕΠ κτλ).
                         </p>
                     </li>
                     <li>
                         <p>
-                            Τα στοιχεία λογαριασμού που ζητούνται για τη σύνδεση/εγγραφή των χρηστών στην κεντρική πύλη
-                            του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ»
-                            αποσκοπούν στη διαπίστευση της εκπαιδευτικής τους ιδιότητας και είναι απολύτως εμπιστευτικά.
+                            Τα στοιχεία λογαριασμού που ζητούνται για τη σύνδεση/εγγραφή των χρηστών στο «Αποθετήριο»
+                            είναι απολύτως εμπιστευτικά.
                         </p>
                     </li>
                     <li>
                         <p>
-                            Οι συνδεδεμένοι χρήστες / μέλη της κοινότητας ΦΩΤΟΔΕΝΤΡΟΥ συμφωνούν ότι όλες οι πληροφορίες
-                            που έχουν καταχωρίσει στο προφίλ τους καθώς και όλες οι τυχόν αξιολογήσεις και τα σχόλια σε
+                            Οι συνδεδεμένοι χρήστες / μέλη της κοινότητας «Αποθετηρίου» συμφωνούν ότι όλα τα αρχεία που έχουν καταχωρήσει
+                            καθώς και όλες οι τυχόν αξιολογήσεις και τα σχόλια σε
                             υλικό τρίτων που έχουν καταθέσει, είναι δημόσια και ανοιχτά σε όλους. Ως εκ τούτου δεν αποτελούν
                             εμπιστευτικά στοιχεία που διέπονται από τους νόμους της Αρχής Προστασίας Δεδομένων
                             Προσωπικού Χαρακτήρα.
@@ -143,14 +134,14 @@
                     </li>
                     <li>
                         <p>
-                            Η κεντρική πύλη του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ»
+                            Η κεντρική πύλη του «Αποθετηρίου»
                             δεν ευθύνεται για τυχόν εμφάνιση προσωπικών δεδομένων των μελών
                             τα οποία εμφανίζονται σε δικτυακές σελίδες μέσω υπηρεσιών καταλόγου και εξυπηρετητών αναζήτησης.
                         </p>
                     </li>
                     <li>
                         <p>
-                            Τα μέλη συμφωνούν ότι οι διαχειριστές της κεντρικής πύλης του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ»
+                            Τα μέλη συμφωνούν ότι οι διαχειριστές του «Αποθετηρίου»
                             διατηρούν το δικαίωμα πρόσβασης στον προσωπικό τους λογαριασμό
                             σε περιπτώσεις κατά τις οποίες υφίστανται τεχνικοί και/ή λειτουργικοί λόγοι.
                         </p>
@@ -161,7 +152,7 @@
                             όλες τις δραστηριότητες που πραγματοποιούνται μέσω αυτού. Στο τέλος κάθε συνεδρίας, οφείλουν
                             να αποσυνδέονται από το λογαριασμό τους. Σε περιπτώσεις κατά τις οποίες διαπιστωθεί
                             παραβίαση και/ή μη εξουσιοδοτημένη χρήση του λογαριασμού τους,
-                            συμφωνούν να ενημερώσουν άμεσα τους διαχειριστές της κεντρικής πύλης.
+                            συμφωνούν να ενημερώσουν άμεσα τους διαχειριστές «Αποθετηρίου».
                         </p>
                     </li>
                 </ol></li>
@@ -170,18 +161,18 @@
                 <ol style="font-size: initial; font-weight: normal; margin-bottom: 10px">
                     <li>
                         <p>
-                            Οι διαχειριστές της κεντρικής πύλης του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ»
+                            Οι διαχειριστές του «Αποθετηρίου»
                             διατηρούν το δικαίωμα χωρίς πρότερη ενημέρωση να αποκλείσουν/περιορίσουν το λογαριασμό ενός
-                            μέλους και την πρόσβαση αυτού στην κεντρική πύλη, όταν έχει κατ’ επανάληψη αναφερθεί να παραβιάζει
-                            την Πολιτική Αποδεκτής Χρήσης της κεντρικής πύλης του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ».
+                            μέλους και την πρόσβαση αυτού στο «Αποθετήριο», όταν έχει κατ’ επανάληψη αναφερθεί να παραβιάζει
+                            την Πολιτική Αποδεκτής Χρήσης του «Αποθετηρίου».
                         </p>
                     </li>
                     <li>
                         <p>
-                            Τα μέλη της κοινότητας ΦΩΤΟΔΕΝΤΡΟΥ συμφωνούν ότι οι αποκλεισμοί των λογαριασμών τους είναι
-                            στη διακριτική ευχέρεια των διαχειριστών της κεντρικής πύλης, οι οποίοι δεν υποχρεούνται να
+                            Τα μέλη της κοινότητας «Αποθετηρίου» συμφωνούν ότι οι αποκλεισμοί των λογαριασμών τους είναι
+                            στη διακριτική ευχέρεια των διαχειριστών, οι οποίοι δεν υποχρεούνται να
                             δικαιολογηθούν σε αυτούς ή σε κάποιο τρίτο μέρος για τον τερματισμό ή τη διακοπή της πρόσβασής
-                            τους στις υπηρεσίες της κεντρικής πύλης.
+                            τους στις υπηρεσίες του «Αποθετηρίου».
                         </p>
                     </li>
                 </ol></li>
@@ -190,21 +181,19 @@
                 <ol style="font-size: initial; font-weight: normal; margin-bottom: 10px">
                     <li>
                         <p>
-                            Οι πάσης φύσεως υπηρεσίες και πληροφορίες που εμπεριέχονται στην κεντρική πύλη του Εθνικού Συσσωρευτή
-                            Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ»  παρέχονται στη βάση του «ως έχει» και «ως διατίθενται»
+                            Οι πάσης φύσεως υπηρεσίες και πληροφορίες που εμπεριέχονται στο «Αποθετήριο» παρέχονται στη βάση του «ως έχει» και «ως διατίθενται»
                             και χωρίς καμιά απολύτως εγγύηση οποιουδήποτε είδους.
                         </p>
                     </li>
                     <li>
                         <p>
-                            Δεδομένου ότι οι διαχειριστές της κεντρικής πύλης του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ»
-                            δεν μπορούν να ελέγχουν τους εξωτερικούς δικτυακούς τόπους και πόρους προς τους οποίους η κεντρική πύλη
-                            διατηρεί συνδέσμους, οι χρήστες αναγνωρίζουν και συμφωνούν ότι η κεντρική πύλη του Εθνικού Συσσωρευτή
-                            Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ» δεν φέρει ουδεμία ευθύνη για τη διαθεσιμότητα αυτών,
+                            Δεδομένου ότι οι διαχειριστές του «Αποθετηρίου»
+                            δεν μπορούν να ελέγχουν τους εξωτερικούς δικτυακούς τόπους και πόρους προς τους οποίους το «Αποθετήριο»
+                            διατηρεί συνδέσμους, οι χρήστες αναγνωρίζουν και συμφωνούν ότι το «Αποθετήριο» δεν φέρει ουδεμία ευθύνη για τη διαθεσιμότητα αυτών,
                             και δεν προσυπογράφει, ούτε είναι υπεύθυνη για οποιοδήποτε περιεχόμενο, διαφήμιση,
                             προϊόν ή άλλο υλικό βρίσκεται ή είναι διαθέσιμο μέσω των εν λόγω δικτυακών τόπων ή πόρων.
-                            Επιπλέον, οι χρήστες αναγνωρίζουν και συμφωνούν ότι η κεντρική πύλη του Εθνικού Συσσωρευτή Εκπαιδευτικού
-                            Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ» δεν φέρει ουδεμία ευθύνη, άμεσα ή έμμεσα, για τυχόν ζημιά ή απώλεια προκαλείται
+                            Επιπλέον, οι χρήστες αναγνωρίζουν και συμφωνούν ότι το «Αποθετήριο» δεν φέρει ουδεμία ευθύνη,
+                            άμεσα ή έμμεσα, για τυχόν ζημιά ή απώλεια προκαλείται
                             ή φέρεται να προκαλείται από ή σε σχέση με τη χρήση ή την εξάρτηση από οποιοδήποτε περιεχόμενο,
                             προϊόντα ή υπηρεσίες διατίθενται από έναν εξωτερικό δικτυακό τόπο ή πόρο, καθώς και ότι δεν είναι υπεύθυνο
                             για την πολιτική ασφαλείας του και για τον τρόπο διαχείρισης των ηλεκτρονικών επισκεπτών του.
@@ -218,7 +207,7 @@
 
         </dl>
         <hr/>
-        <p class="font-weight-bold">Ο χρήστης/επισκέπτης/μέλος της κεντρικής πύλης του Εθνικού Συσσωρευτή Εκπαιδευτικού Περιεχομένου «ΦΩΤΟΔΕΝΤΡΟ» συμφωνεί και αποδέχεται πλήρως τους ανωτέρω όρους.</p>
+        <p class="font-weight-bold">Ο χρήστης/επισκέπτης/μέλος του «Αποθετηρίου» συμφωνεί και αποδέχεται πλήρως τους ανωτέρω όρους.</p>
 
     </div>
 </div>
